@@ -126,6 +126,7 @@ _WebViewDidEndEditingNotification
 _WebViewProgressEstimateChangedNotification
 _WebViewProgressFinishedNotification
 _WebViewProgressStartedNotification
+_WebViewWillCloseNotification
 __WebHTMLViewPrintingMaximumShrinkFactor
 __WebHTMLViewPrintingMinimumShrinkFactor
 __WebViewDidStartAcceleratedCompositingNotification
