@@ -1,3 +1,15 @@
+2013-09-13  Dan Bernstein  <mitz@apple.com>
+
+        [mac WK1] Introduce WebViewWillCloseNotification
+        https://bugs.webkit.org/show_bug.cgi?id=121321
+
+        Reviewed by Sam Weinig.
+
+        * WebKit.exp: Exported WebViewWillCloseNotification.
+        * WebView/WebView.mm:
+        (-[WebView _close]): Send WebViewWillCloseNotification before closing the WebView.
+        * WebView/WebViewPrivate.h: Declared WebViewWillCloseNotification.
+
 2013-09-13  Tim Horton  <timothy_horton@apple.com>
 
         REGRESSION (r155615): Lots of reftests fail with single line or single pixel differences
